--- a/meeting-scheduler-backend/src/main/resources/application.properties
+++ b/meeting-scheduler-backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port = 8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:file:C:/Users/A.Nassar/Desktop/meeting-scheduler/meeting_scheduler_database
+h2.implicitRelativePath=true
+
+spring.datasource.url=jdbc:h2:file:./meeting_scheduler_database
 spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.platform=h2
